--- a/src/style.css
+++ b/src/style.css
@@ -2,21 +2,15 @@
   text-align: center;
 }
 
-
-
-
-
-
-
-.App-link {
-  color: #61dafb;
+.title{
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.red{
+  text-decoration: underline;
+}
+
+.imgsrc{
+  height: 400px;
+  width: 400px;
 }
